# polymarket-trading-bot

./: .env.example  .gitignore  README.md  docker-compose.yml  seed.py  start-services.ps1
.mimocode/: .cron-lock
_bmad/: config.toml  config.user.toml
_bmad-output/epics/: epic-8-audit-remediation.md
_bmad-output/implementation-artifacts/: code-review-report.md
_bmad-output/sprint/: sprint-status.yaml
_bmad-output/stories/: 1-1-scanner-websocket-connection-market-catalog.md  1-10-telegram-notifications.md  1-2-market-scanner-stale-detection-reconnect-batching.md  1-3-arbitrage-detection-opportunity-scoring.md  1-4-execution-engine-order-placement-slippage-protection.md  1-5-execution-engine-atomic-yes-no-circuit-breaker.md  1-6-position-tracking-pnl-calculation.md  1-7-risk-management-pit-boss-daily-budget.md  1-8-risk-management-emergency-stop-drawdown-breaker.md  1-9-trade-history-recording.md  2-1-advanced-risk-correlation-limits-batasi-win-metabolic-rate.md  2-2-dashboard-portfolio-overview-position-display.md  2-3-dashboard-risk-status-quick-actions.md  (+31 more)
services/notification/: pyproject.toml  requirements.txt
services/notification/adapters/: nats_subscriber.py  postgres_repo.py  telegram_bot.py
services/notification/app/: categorizer.py  config.py  formatter.py  history.py  main.py  metrics.py  models.py  preferences.py  throttler.py
services/notification/ports/: event_port.py  notify_port.py  storage_port.py
services/notification/tests/: test_categorizer.py  test_formatter.py  test_history.py  test_preferences.py  test_throttler.py
(+443 files in other folders)
