[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pqap-notification"
version = "1.0.0"
description = "PQAP Telegram Notification Service"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=21.0",
    "nats-py>=2.10.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "prometheus-client>=0.21.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
